# instagram_media

./: README.md  pyproject.toml
instagram/: logic.py  main.py  scheme.py
tests/: test_instagram.py
